testsuite/tests/typecheck/should_fail/T6022.stderr
T6022.hs:4:1: error: [GHC-80003]
    • Non type-variable argument in the constraint: Eq ([t] -> t)
    • When checking the inferred type
        f :: forall {t}. Eq ([t] -> t) => ([t] -> t) -> Bool
    Suggested fix:
      Perhaps you intended to use the ‘FlexibleContexts’ extension

